Añadi mi foto al about us y mi correo a los mails de contacto

--- a/index.html
+++ b/index.html
@@ -115,11 +115,21 @@
 						<h5>David Corchado</h5>
                         <p class="subtitle">ISD</p>
                         <div class="avatar"><img src="img/team/2.jpg" alt="" class="img-responsive img-circle" /></div>
-
                     </div>
                 </div>
 				</div>
             </div>
+			<div class="col-xs-6 col-sm-3 col-md-3">
+				<div class="wow bounceInUp" data-wow-delay="0.8s">
+                <div class="team boxed-grey">
+                    <div class="inner">
+						<h5>Yair Camacho</h5>
+                        <p class="subtitle">ISC</p>
+                        <div class="avatar"><img src="img/team/3.jpg" alt="" class="img-responsive img-circle" /></div>
+                    </div>
+                </div>
+				</div>
+            </div>            
         </div>		
 		</div>
 	</section>
@@ -284,6 +294,8 @@
 				  <a href="mailto:A01205724@itesm.mx">A01205724@itesm.mx</a>
                     <br>
                     <a href="maito:A01205020@itesm.mx">A01205020@itesm.mx</a>
+                    <br>
+                    <a href="maito:A01205020@itesm.mx">A01206849@itesm.mx</a>                    
 				</address>	
 				<address>
 				  <strong>We're on social network</strong><br>
